--- a/style.css
+++ b/style.css
@@ -95,6 +95,20 @@ figcaption {
     padding: 5px 10px;
 }
 
+.collage {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.collage > .img {
+    flex-basis: calc(50% - 2.5px);
+}
+
+.collage > .img:nth-child(1),
+.collge > .img:nth-child(2) {
+    margin-bottom: 5px;
+}
 
 /*********************************************************************
   YOUR TABLET/DESKTOP STYLES GO HERE
