--- a/style.css
+++ b/style.css
@@ -110,6 +110,65 @@ figcaption {
     margin-bottom: 5px;
 }
 
+.annotate {
+    position: relative;
+}
+
+.dot{
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    position: absolute;
+}
+
+.pink {
+    background-color: rgb(233, 150, 164);
+}
+
+.green {
+    background-color: rgb(105, 194, 105);
+}
+
+.close,
+.inner {
+    display: none;
+}
+
+.close {
+    color: #fff;
+    text-decoration: none;
+    position: absolute;
+    right: 10px;
+    top: 0;
+}
+
+.inner {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    top: 5px;
+}
+
+.dot.active {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 0;
+}
+
+.dot.active .close,
+.dot.active .inner {
+    display: block;
+}
+
+#camera:not(.active) {
+    top: 18%;
+    left: 29%;
+}
 /*********************************************************************
   YOUR TABLET/DESKTOP STYLES GO HERE
 *********************************************************************/
